--- a/lightning_cnn_dev.ipynb
+++ b/lightning_cnn_dev.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1yVxJN3ZBhN5IE79bbO86O0mItrxihhIc",
-      "authorship_tag": "ABX9TyNx8qKArt1WQLWPLjzAiQ0w",
+      "authorship_tag": "ABX9TyNYtPgtiYyxZb+SGdjTBgMh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,29 +38,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "-F0Phar2DRii",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "084314cb-9787-4d27-a9b6-806950820d92"
+        "outputId": "c6666eda-c091-4f27-a9fd-575648d05b6b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "\u001b[K     |██████████████████████████████▎ | 834.1 MB 1.2 MB/s eta 0:00:40tcmalloc: large alloc 1147494400 bytes == 0x64d64000 @  0x7f9d194f9615 0x58ead6 0x4f355e 0x4d222f 0x51041f 0x5b4ee6 0x58ff2e 0x510325 0x5b4ee6 0x58ff2e 0x50d482 0x4d00fb 0x50cb8d 0x4d00fb 0x50cb8d 0x4d00fb 0x50cb8d 0x4bac0a 0x538a76 0x590ae5 0x510280 0x5b4ee6 0x58ff2e 0x50d482 0x5b4ee6 0x58ff2e 0x50c4fc 0x58fd37 0x50ca37 0x5b4ee6 0x58ff2e\n",
+            "\u001b[K     |████████████████████████████████| 881.9 MB 21 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 23.3 MB 103.9 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 8.0 MB 56.7 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 2.9 MB 52.1 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 1.0 MB 29.2 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 829 kB 79.1 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 529 kB 42.3 MB/s \n",
+            "\u001b[?25h  Building wheel for future (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: seaborn==0.11.2 in /usr/local/lib/python3.7/dist-packages (0.11.2)\n",
-            "Requirement already satisfied: matplotlib>=2.2 in /usr/local/lib/python3.7/dist-packages (from seaborn==0.11.2) (3.2.2)\n",
-            "Requirement already satisfied: numpy>=1.15 in /usr/local/lib/python3.7/dist-packages (from seaborn==0.11.2) (1.21.6)\n",
-            "Requirement already satisfied: scipy>=1.0 in /usr/local/lib/python3.7/dist-packages (from seaborn==0.11.2) (1.7.3)\n",
             "Requirement already satisfied: pandas>=0.23 in /usr/local/lib/python3.7/dist-packages (from seaborn==0.11.2) (1.3.5)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.2->seaborn==0.11.2) (3.0.9)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.2->seaborn==0.11.2) (2.8.2)\n",
+            "Requirement already satisfied: scipy>=1.0 in /usr/local/lib/python3.7/dist-packages (from seaborn==0.11.2) (1.7.3)\n",
+            "Requirement already satisfied: numpy>=1.15 in /usr/local/lib/python3.7/dist-packages (from seaborn==0.11.2) (1.21.6)\n",
+            "Requirement already satisfied: matplotlib>=2.2 in /usr/local/lib/python3.7/dist-packages (from seaborn==0.11.2) (3.2.2)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.2->seaborn==0.11.2) (1.4.4)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.2->seaborn==0.11.2) (0.11.0)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.2->seaborn==0.11.2) (3.0.9)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.2->seaborn==0.11.2) (2.8.2)\n",
             "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from kiwisolver>=1.0.1->matplotlib>=2.2->seaborn==0.11.2) (4.1.1)\n",
             "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.23->seaborn==0.11.2) (2022.6)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.1->matplotlib>=2.2->seaborn==0.11.2) (1.15.0)\n",
@@ -68,25 +77,25 @@
             "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (1.21.6)\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: pandas==1.3.5 in /usr/local/lib/python3.7/dist-packages (1.3.5)\n",
-            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas==1.3.5) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.7/dist-packages (from pandas==1.3.5) (2022.6)\n",
             "Requirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.7/dist-packages (from pandas==1.3.5) (1.21.6)\n",
+            "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.7/dist-packages (from pandas==1.3.5) (2022.6)\n",
+            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas==1.3.5) (2.8.2)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.7.3->pandas==1.3.5) (1.15.0)\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting opendatasets\n",
             "  Downloading opendatasets-0.1.22-py3-none-any.whl (15 kB)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from opendatasets) (4.64.1)\n",
             "Requirement already satisfied: kaggle in /usr/local/lib/python3.7/dist-packages (from opendatasets) (1.5.12)\n",
             "Requirement already satisfied: click in /usr/local/lib/python3.7/dist-packages (from opendatasets) (7.1.2)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.7/dist-packages (from kaggle->opendatasets) (2022.9.24)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from opendatasets) (4.64.1)\n",
             "Requirement already satisfied: python-slugify in /usr/local/lib/python3.7/dist-packages (from kaggle->opendatasets) (6.1.2)\n",
-            "Requirement already satisfied: urllib3 in /usr/local/lib/python3.7/dist-packages (from kaggle->opendatasets) (1.24.3)\n",
             "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.7/dist-packages (from kaggle->opendatasets) (2.8.2)\n",
             "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from kaggle->opendatasets) (2.23.0)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.7/dist-packages (from kaggle->opendatasets) (2022.9.24)\n",
             "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.7/dist-packages (from kaggle->opendatasets) (1.15.0)\n",
+            "Requirement already satisfied: urllib3 in /usr/local/lib/python3.7/dist-packages (from kaggle->opendatasets) (1.24.3)\n",
             "Requirement already satisfied: text-unidecode>=1.3 in /usr/local/lib/python3.7/dist-packages (from python-slugify->kaggle->opendatasets) (1.3)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->kaggle->opendatasets) (3.0.4)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->kaggle->opendatasets) (2.10)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->kaggle->opendatasets) (3.0.4)\n",
             "Installing collected packages: opendatasets\n",
             "Successfully installed opendatasets-0.1.22\n"
           ]
@@ -122,33 +131,34 @@
         "import torchvision.transforms as T\n",
         "from torchvision.utils import make_grid\n",
         "from torchmetrics.functional import accuracy\n",
-        "import pytorch_lightning as pl"
+        "import pytorch_lightning as pl\n",
+        "from google.colab import drive"
       ],
       "metadata": {
         "id": "WanQlFEIbkR6"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "drive.mount('/content/data/in')"
+        "drive.mount('/content/gdrive')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "u3TBv9nnaODW",
-        "outputId": "5a3b97af-94d4-47b6-923c-ec6dd91c138e"
+        "outputId": "bec0d6b9-aec7-409d-ab6c-a2235a173f6e"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/data/in\n"
+            "Mounted at /content/gdrive\n"
           ]
         }
       ]
@@ -164,9 +174,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yHhZOV9hc0aN",
-        "outputId": "8566d28f-e392-4ee2-dcb0-a382ec987979"
+        "outputId": "7c9dc1d8-f4e3-447c-dd3c-57036576ec0d"
       },
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,7 +192,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 6.31G/6.31G [00:53<00:00, 127MB/s]\n"
+            "100%|██████████| 6.31G/6.31G [00:50<00:00, 134MB/s]\n"
           ]
         },
         {
@@ -206,9 +216,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AWH48fIpfPuS",
-        "outputId": "46d8b51b-6de0-42fc-9f1e-175b5d04f89a"
+        "outputId": "14d7bb8f-306e-448e-8260-cefed3f1ae09"
       },
-      "execution_count": 11,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,9 +260,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1nQt2-C0hi4C",
-        "outputId": "0992487a-2baa-46a5-f5ff-d0320c68db9f"
+        "outputId": "ebea990a-a17a-4415-dea1-ab4a127ba56f"
       },
-      "execution_count": 13,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,7 +284,9 @@
         "np.random.seed(0)\n",
         "\n",
         "train_imgs_orig = os.listdir(\"histopathologic-cancer-detection/train\")\n",
+        "\n",
         "selected_image_list = []\n",
+        "\n",
         "for img in np.random.choice(train_imgs_orig, 10000):\n",
         " selected_image_list.append(img)\n",
         "len(selected_image_list)"
@@ -284,9 +296,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YAdrqgT7jjbl",
-        "outputId": "5c80ee35-6eb5-43bf-8aaf-4651f6ab1409"
+        "outputId": "2f283af5-a6f1-4bee-f5c8-b05e9c7c9767"
       },
-      "execution_count": 15,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -296,7 +308,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 7
         }
       ]
     },
@@ -305,8 +317,10 @@
       "source": [
         "np.random.seed(0)\n",
         "np.random.shuffle(selected_image_list)\n",
+        "\n",
         "cancer_train_idx = selected_image_list[:8000]\n",
         "cancer_test_idx = selected_image_list[8000:]\n",
+        "\n",
         "print(\"Number of images in the downsampled training dataset: \", len(cancer_train_idx))\n",
         "print(\"Number of images in the downsampled testing dataset: \", len(cancer_test_idx))"
       ],
@@ -315,9 +329,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OfSNw_SxkFqC",
-        "outputId": "ad2c8a8c-9f35-4358-e2bb-b00d9da648ad"
+        "outputId": "d7e52b29-71f6-43b5-9d3e-8ecd58fb852d"
       },
-      "execution_count": 16,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,59 +346,18 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/gdrive')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zE7lFlf4lGW4",
-        "outputId": "522c0723-7eae-4d3e-acbe-0c92b96311f7"
-      },
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/gdrive\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "os.mkdir('/content/gdrive/My Drive/Colab Notebooks/histopathologic-cancer-detection/train_dataset/')\n",
+        "os.mkdir('/content/histopathologic-cancer-detection/train_dataset/')\n",
         "\n",
         "for fname in cancer_train_idx:\n",
         " src = os.path.join('histopathologic-cancer-detection/train', fname)\n",
-        " dst = os.path.join('/content/gdrive/My Drive/Colab Notebooks/histopathologic-cancer-detection/train_dataset/', fname)\n",
+        " dst = os.path.join('/content/histopathologic-cancer-detection/train_dataset/', fname)\n",
         " shutil.copyfile(src, dst)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 235
-        },
-        "id": "v3PZ_R0Bn2Mh",
-        "outputId": "94c7aae8-a540-478d-d637-0f13a7bfd207"
+        "id": "v3PZ_R0Bn2Mh"
       },
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-32-dc81a3bca20d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/gdrive/My Drive/Colab Notebooks/histopathologic-cancer-detection/train_dataset/'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcancer_train_idx\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m  \u001b[0msrc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'histopathologic-cancer-detection/train'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m  \u001b[0mdst\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/gdrive/My Drive/Colab Notebooks/histopathologic-cancer-detection/train_dataset/'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/gdrive/My Drive/Colab Notebooks/histopathologic-cancer-detection/train_dataset/'"
-          ]
-        }
-      ]
+      "execution_count": 10,
+      "outputs": []
     },
     {
       "cell_type": "code",
