--- a/lightning_cnn_dev.ipynb
+++ b/lightning_cnn_dev.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1yVxJN3ZBhN5IE79bbO86O0mItrxihhIc",
-      "authorship_tag": "ABX9TyNquaxHCha7MZ+jhQ3OxSCG",
+      "authorship_tag": "ABX9TyM+rBMCIQxXZ8frf7znVmee",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,37 +38,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 44,
       "metadata": {
         "id": "-F0Phar2DRii",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c6666eda-c091-4f27-a9fd-575648d05b6b"
+        "outputId": "7a06529f-fb3e-4f8d-e697-528eeda6a6c3"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[K     |██████████████████████████████▎ | 834.1 MB 1.2 MB/s eta 0:00:40tcmalloc: large alloc 1147494400 bytes == 0x64d64000 @  0x7f9d194f9615 0x58ead6 0x4f355e 0x4d222f 0x51041f 0x5b4ee6 0x58ff2e 0x510325 0x5b4ee6 0x58ff2e 0x50d482 0x4d00fb 0x50cb8d 0x4d00fb 0x50cb8d 0x4d00fb 0x50cb8d 0x4bac0a 0x538a76 0x590ae5 0x510280 0x5b4ee6 0x58ff2e 0x50d482 0x5b4ee6 0x58ff2e 0x50c4fc 0x58fd37 0x50ca37 0x5b4ee6 0x58ff2e\n",
-            "\u001b[K     |████████████████████████████████| 881.9 MB 21 kB/s \n",
-            "\u001b[K     |████████████████████████████████| 23.3 MB 103.9 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 8.0 MB 56.7 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 2.9 MB 52.1 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 1.0 MB 29.2 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 829 kB 79.1 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 529 kB 42.3 MB/s \n",
-            "\u001b[?25h  Building wheel for future (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: seaborn==0.11.2 in /usr/local/lib/python3.7/dist-packages (0.11.2)\n",
-            "Requirement already satisfied: pandas>=0.23 in /usr/local/lib/python3.7/dist-packages (from seaborn==0.11.2) (1.3.5)\n",
-            "Requirement already satisfied: scipy>=1.0 in /usr/local/lib/python3.7/dist-packages (from seaborn==0.11.2) (1.7.3)\n",
-            "Requirement already satisfied: numpy>=1.15 in /usr/local/lib/python3.7/dist-packages (from seaborn==0.11.2) (1.21.6)\n",
             "Requirement already satisfied: matplotlib>=2.2 in /usr/local/lib/python3.7/dist-packages (from seaborn==0.11.2) (3.2.2)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.2->seaborn==0.11.2) (1.4.4)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.2->seaborn==0.11.2) (0.11.0)\n",
+            "Requirement already satisfied: scipy>=1.0 in /usr/local/lib/python3.7/dist-packages (from seaborn==0.11.2) (1.7.3)\n",
+            "Requirement already satisfied: pandas>=0.23 in /usr/local/lib/python3.7/dist-packages (from seaborn==0.11.2) (1.3.5)\n",
+            "Requirement already satisfied: numpy>=1.15 in /usr/local/lib/python3.7/dist-packages (from seaborn==0.11.2) (1.21.6)\n",
             "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.2->seaborn==0.11.2) (3.0.9)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.2->seaborn==0.11.2) (0.11.0)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.2->seaborn==0.11.2) (1.4.4)\n",
             "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.2->seaborn==0.11.2) (2.8.2)\n",
             "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from kiwisolver>=1.0.1->matplotlib>=2.2->seaborn==0.11.2) (4.1.1)\n",
             "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.23->seaborn==0.11.2) (2022.6)\n",
@@ -77,27 +68,24 @@
             "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (1.21.6)\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: pandas==1.3.5 in /usr/local/lib/python3.7/dist-packages (1.3.5)\n",
-            "Requirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.7/dist-packages (from pandas==1.3.5) (1.21.6)\n",
             "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.7/dist-packages (from pandas==1.3.5) (2022.6)\n",
             "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas==1.3.5) (2.8.2)\n",
+            "Requirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.7/dist-packages (from pandas==1.3.5) (1.21.6)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.7.3->pandas==1.3.5) (1.15.0)\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting opendatasets\n",
-            "  Downloading opendatasets-0.1.22-py3-none-any.whl (15 kB)\n",
-            "Requirement already satisfied: kaggle in /usr/local/lib/python3.7/dist-packages (from opendatasets) (1.5.12)\n",
+            "Requirement already satisfied: opendatasets in /usr/local/lib/python3.7/dist-packages (0.1.22)\n",
             "Requirement already satisfied: click in /usr/local/lib/python3.7/dist-packages (from opendatasets) (7.1.2)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from opendatasets) (4.64.1)\n",
-            "Requirement already satisfied: python-slugify in /usr/local/lib/python3.7/dist-packages (from kaggle->opendatasets) (6.1.2)\n",
-            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.7/dist-packages (from kaggle->opendatasets) (2.8.2)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from kaggle->opendatasets) (2.23.0)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.7/dist-packages (from kaggle->opendatasets) (2022.9.24)\n",
+            "Requirement already satisfied: kaggle in /usr/local/lib/python3.7/dist-packages (from opendatasets) (1.5.12)\n",
             "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.7/dist-packages (from kaggle->opendatasets) (1.15.0)\n",
+            "Requirement already satisfied: python-slugify in /usr/local/lib/python3.7/dist-packages (from kaggle->opendatasets) (6.1.2)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from kaggle->opendatasets) (2.23.0)\n",
             "Requirement already satisfied: urllib3 in /usr/local/lib/python3.7/dist-packages (from kaggle->opendatasets) (1.24.3)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.7/dist-packages (from kaggle->opendatasets) (2022.9.24)\n",
+            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.7/dist-packages (from kaggle->opendatasets) (2.8.2)\n",
             "Requirement already satisfied: text-unidecode>=1.3 in /usr/local/lib/python3.7/dist-packages (from python-slugify->kaggle->opendatasets) (1.3)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->kaggle->opendatasets) (2.10)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->kaggle->opendatasets) (3.0.4)\n",
-            "Installing collected packages: opendatasets\n",
-            "Successfully installed opendatasets-0.1.22\n"
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->kaggle->opendatasets) (3.0.4)\n"
           ]
         }
       ],
@@ -137,7 +125,7 @@
       "metadata": {
         "id": "WanQlFEIbkR6"
       },
-      "execution_count": 2,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -150,9 +138,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u3TBv9nnaODW",
-        "outputId": "bec0d6b9-aec7-409d-ab6c-a2235a173f6e"
+        "outputId": "73bb830b-61ad-4470-deff-c76ead74e28c"
       },
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,9 +162,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yHhZOV9hc0aN",
-        "outputId": "7c9dc1d8-f4e3-447c-dd3c-57036576ec0d"
+        "outputId": "805b412a-3875-4cab-e272-27eb41a4a04d"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,9 +204,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AWH48fIpfPuS",
-        "outputId": "14d7bb8f-306e-448e-8260-cefed3f1ae09"
+        "outputId": "4b5b0177-85f9-4fff-a996-acbf620a55f5"
       },
-      "execution_count": 5,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -260,9 +248,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1nQt2-C0hi4C",
-        "outputId": "ebea990a-a17a-4415-dea1-ab4a127ba56f"
+        "outputId": "750f84a5-da87-4271-84fa-8accea05db25"
       },
-      "execution_count": 6,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,9 +259,11 @@
             "Searching in :  /content/histopathologic-cancer-detection\n",
             "Searching in :  /content/histopathologic-cancer-detection/test\n",
             "Searching in :  /content/histopathologic-cancer-detection/train\n",
-            "Total number of files 277485\n",
-            "Total Number of directories 2\n",
-            "Total: 277487\n"
+            "Searching in :  /content/histopathologic-cancer-detection/train_dataset\n",
+            "Searching in :  /content/histopathologic-cancer-detection/test_dataset\n",
+            "Total number of files 287321\n",
+            "Total Number of directories 4\n",
+            "Total: 287325\n"
           ]
         }
       ]
@@ -283,7 +273,7 @@
       "source": [
         "np.random.seed(0)\n",
         "\n",
-        "train_imgs_orig = os.listdir(\"histopathologic-cancer-detection/train\")\n",
+        "train_imgs_orig = os.listdir(\"/content/histopathologic-cancer-detection/train\")\n",
         "\n",
         "selected_image_list = []\n",
         "\n",
@@ -296,9 +286,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YAdrqgT7jjbl",
-        "outputId": "2f283af5-a6f1-4bee-f5c8-b05e9c7c9767"
+        "outputId": "defc809b-4069-4c98-d039-558f4ffe61f0"
       },
-      "execution_count": 7,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -308,7 +298,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 48
         }
       ]
     },
@@ -329,9 +319,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OfSNw_SxkFqC",
-        "outputId": "d7e52b29-71f6-43b5-9d3e-8ecd58fb852d"
+        "outputId": "43b25c99-672b-4642-dc0d-b9c447a4b978"
       },
-      "execution_count": 8,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -346,33 +336,155 @@
     {
       "cell_type": "code",
       "source": [
-        "os.mkdir('/content/histopathologic-cancer-detection/train_dataset/')\n",
+        "#os.mkdir('/content/histopathologic-cancer-detection/train_dataset/')\n",
         "\n",
         "for fname in cancer_train_idx:\n",
-        " src = os.path.join('histopathologic-cancer-detection/train', fname)\n",
-        " dst = os.path.join('/content/histopathologic-cancer-detection/train_dataset/', fname)\n",
-        " shutil.copyfile(src, dst)"
+        "  src = os.path.join('histopathologic-cancer-detection/train', fname)\n",
+        "  dst = os.path.join('/content/histopathologic-cancer-detection/train_dataset/', fname)\n",
+        "  shutil.copyfile(src, dst)\n",
+        "\n",
+        "print('No. of images in downsampled training dataset: ', len(os.listdir(\"/content/histopathologic-cancer-detection/train_dataset/\")))"
       ],
       "metadata": {
-        "id": "v3PZ_R0Bn2Mh"
+        "id": "v3PZ_R0Bn2Mh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c21ff56b-0a9f-45d4-dbef-b42929b754e1"
       },
-      "execution_count": 10,
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "No. of images in downsampled training dataset:  7847\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#os.mkdir('/content/histopathologic-cancer-detection/test_dataset/')\n",
+        "\n",
+        "for fname in cancer_test_idx:\n",
+        "  src = os.path.join('histopathologic-cancer-detection/train', fname)\n",
+        "  dst = os.path.join('/content/histopathologic-cancer-detection/test_dataset/', fname)\n",
+        "  shutil.copyfile(src, dst)\n",
+        "\n",
+        "print('No. of images in downsampled testing dataset: ', len(os.listdir(\"/content/histopathologic-cancer-detection/test_dataset/\")))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iy5jWSmq-BvS",
+        "outputId": "d93670a7-ea62-4ebc-8793-9997176c1283"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "No. of images in downsampled testing dataset:  1989\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "selected_image_labels = pd.DataFrame()\n",
+        "\n",
+        "id_list = []\n",
+        "label_list = []\n",
+        "\n",
+        "for img in selected_image_list:\n",
+        "  label_tuple = cancer_labels.loc[cancer_labels['id'] == img.split('.')[0]]\n",
+        "  id_list.append(label_tuple['id'].values[0])\n",
+        "  label_list.append(label_tuple['label'].values[0])"
+      ],
+      "metadata": {
+        "id": "O9XANsQN5AaQ"
+      },
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class LoadCancerDataset(Dataset):\n",
+        "  def __init__(self, data_folder, transform = T.Compose([T.CenterCrop(32),T.ToTensor()]), dict_labels={}):\n",
+        "    self.data_folder = data_folder\n",
+        "    self.list_image_files = [s for s in os.listdir(data_folder)]\n",
+        "    self.transform = transform\n",
+        "    self.dict_labels = dict_labels\n",
+        "    self.labels = [dict_labels[i.split('.')[0]] for i in self.list_image_files]\n",
+        "\n",
+        "  def __len__(self):\n",
+        "    return len(self.list_image_files)\n",
+        "\n",
+        "  def __getitem__(self, idx):\n",
+        "    img_name = os.path.join(self.data_folder, self.list_image_files[idx])\n",
+        "    image = Image.open(img_name)\n",
+        "    image = self.transform(image)\n",
+        "    img_name_short = self.list_image_files[idx].split('.')[0]\n",
+        "    label = self.dict_labels[img_name_short]\n",
+        "    return image, label"
+      ],
+      "metadata": {
+        "id": "FGL3TOKuGZGR"
+      },
+      "execution_count": 54,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "### Page 44 to start"
+        "### Below code needs debugged.\n",
+        "\n",
+        "- [Link to current book location](https://subscription.packtpub.com/book/data/9781800561618/3/ch03lvl1sec14/building-a-cnn-model-for-image-recognition)"
       ],
       "metadata": {
-        "id": "C5iONvcU48cS"
+        "id": "u204_ovjPj_j"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "img_class_dict = {k:v for k, v in zip(selected_image_labels.id, selected_image_labels.label)}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 287
+        },
+        "id": "PXPioGhjOO4e",
+        "outputId": "ef2bfa3a-f2a1-44cc-f003-bdf4696ca536"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-55-f65b60675108>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mimg_class_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mv\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mselected_image_labels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mselected_image_labels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5485\u001b[0m         ):\n\u001b[1;32m   5486\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5487\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5488\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5489\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'id'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "O9XANsQN5AaQ"
+        "id": "fHAUk4c-IwsZ"
       },
       "execution_count": null,
       "outputs": []
